# Accucopy

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Makefile.common  README.md  build.rs
.github/workflows/: c-cpp.yml
docker/: Dockerfile  Makefile  README  bashrc  installRPackages.R
docker/updateDocker/: Dockerfile  Makefile  configure
simulate/: acf.py  addPrefix.pl  bicseq2.py  calculate.pl  calploidy.py  configure  eagle.py  freebayes.py  lzh_pegasus.py  mix.pl  newseg.py  purity.py  simulated_annealing.py  singleclone_simulate.sh  tabVcf.py  wrap.sh  write_configure_file.py
simulate/vcf/: CN.tab  CNA_5M.vcf  CNA_5M_1123.tab  CNA_more.vcf  CNA_sub.vcf  CN_100M.tab  CN_100M.vcf  CN_50M.tab  CN_50M.vcf  CN_5M_1.tab  CN_5M_3.tab  CN_5M_3.vcf  CN_sub.cnv  CN_sub.tab  CN_sub_1.tab  CN_sub_1.vcf  CN_sub_2.tab  CN_sub_2.vcf  cn.wgs.cna2.tab  cn.wgs.vcf  cn.wgs_1202.tab  cptabvcf.py  ploidy.txt  singleclone_CN.tab
src/: lib.rs  main.rs  normalize.rs  recall_precision.rs  select_het_snp.rs
src_o/: BaseGADA.cc  BaseGADA.h  CMakeLists.txt  GADA.cc  Makefile  README.tex  RedBlackTree.h  configure  infer.cpp  infer.h  main.py  misc.h  model_selection.cpp  model_selection.h  plot.tre.autocor.R  plotCPandMCP.py  plot_GC_normalization.py  plot_autocor_diff.py  plot_coverage_after_normalization.py  plot_model_select_result.py  plot_snp_maf_exp.py  plot_snp_maf_peak.py  plot_tre.py  prob.cpp  prob.h  read_para.cpp  read_para.h  recall_precision.cpp  singly_linked_list.h
test/: collect_result.sh  judge_result.py  judge_simulation_result.sh  plotResult.py  test_simulation.py  test_tcga.py
