[package]
name = "maestre"
version = "1.7.1"
authors = ["Yu Huang <polyactis@gmail.com>"]
build = "build.rs"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
bio = "0.18.0"
rust-htslib =  "*"
byteorder = "1.3.2"
clap = "2"
csv = "1.0.0-beta.5"
flate2 = "0.2"
time = "0.1.0"
# reqwest="*"
users = "0.6"
regex = "1.3.1"

[dependencies.reqwest]
version = "0.10.0"
default-features = false
features = ["json"]
